Fixed text flickering in Safari

--- a/src/components/FlashCard/FlashCardQuestion/FlashCardQuestion.module.css
+++ b/src/components/FlashCard/FlashCardQuestion/FlashCardQuestion.module.css
@@ -6,6 +6,9 @@
   perspective: 1000px;
   transition: transform 0.8s ease-in-out;
   transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d; /* Safari */
+  -webkit-transform: translate3d(0, 0, 0); /* Safari */
+  transform: translate3d(0, 0, 0);
   border: 1px solid #e5e5e5;
   box-shadow: 0 2px 4px rgba(150, 150, 150, 0.8);
   background-color: #ffffff;
@@ -28,6 +31,7 @@
   width: 100%;
   height: 100%;
   padding: 0 16px;
+
   -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
 }
